flask-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-green-deployment
  labels:
    app: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: salyx21/web-app:1.3
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
