flask-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-green-service
spec:
  selector:
    app: flask
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
