nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ajnjweb.p2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-green-service
            port: 
              number: 5000
